2010-09-21  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-03
	* improve dataset management under Streams node

2010-09-20  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-02
	* 'ChangedIcon' in Diff changed to yellow flag
	* Implement 'move path to ...' context menu command, to move paths
	from one dataset to another within a stream

	* tag V01-05-01
	* back out of jTable.setAutoCreateRowSorter, which is a JDK 6
	feature
	* fix visualization of paths under datasets under streams

2010-09-16  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-00
	* 'remove unreference sequences' fixed
	* fixed bung in Diff regarding OutputModules
	* event contents are now fully sorted after loading:
	contents, streams, datasets, paths and statements are ordered
	alphabetically
	* content statements in the editor can be ordered by path now
	* statements associated with a path are properly loaded
	
2010-03-18  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-04-09
	* 255 path limitiation in converter addressed by Ulf

2010-03-10  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-04-08
	* gui: bugfix, correctly set the version of the chosen
	configuration in PickConfigurationDialog when the release is being
	fixed.

2010-03-02  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-04-07
	* fix import of (non-existing) reference containers
	* add import of contents, streams, and datasets

2010-03-01  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-04-06
	* filter endpaths from dataset 'Add Path' context menu
	* unassigned paths of the parent stream appear now bold in dataset
	editor dialog

	* tag V01-04-05
	* gui: fix path import, where upon import of an existing path its
	information would disappear from streams / datasets / OMs / etc.

	* tag V01-04-04
	* gui/db: fix for bug 28 (Vasu)