@@ -6,7 +6,7 @@
 # runOnlineConverter
 # ------------------
 #
-# 07/24/2008 Philipp Schieferdecker <philipp.schieferdecker@cern.ch>
+#             07/24/2008 Philipp Schieferdecker <philipp.schieferdecker@cern.ch>
 ################################################################################
 
 my $db_host = "";
