@@ -1,3 +1,9 @@
+2010-10-02  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* taqg V01-05-04
+	* ReferenceConainer::getUnresolvedTags(): skip 'source'
+	* DatabaseConnectionDialog: put cursor in pwrd field
+
 2010-09-21  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* tag V01-05-03
